10/26/11 make all beakers the same size in Dilution tab
10/26/11 add temporary M1 display in Dilution tab, to demonstrate layout issues
10/26/11 cleanup of slider code
10/26/11 further generalization of beaker node, so it can be reused in Dilution tab
10/25/11 [58016] delete more stuff related to "Show values" feature
10/25/11 change min concentration label from "low" to "zero"
10/25/11 [57987] delete code related to "Show values" feature, it was becoming too difficult to continue supporting it
10/25/11 more fleshing out of Dilution model and canvas
10/25/11 i18n of Dilution tab
10/25/11 more fleshing out of Dilution canvas, generalization of components from Molarity tab
10/25/11 start fleshing out Dilution model and canvas
10/25/11 move definition of real solutions into  MolarityModel
10/25/11 create stubs for Dilution module
10/25/11 new beaker image from NP, cleaned up wonkiness near the spout
# 0.00.05 (57919) Oct 24, 2011
10/24/11 make arrow slightly larger in concentration display
10/24/11 distribute precipitate on bottom of 3D beaker (random distribution of points inside an ellipse)
10/24/11 adjust relative layout of Reset All button, document play area layout
10/24/11 create "points of interest" via composition instead of inheritance
10/24/11 NamedPointsNode for encapsulating information about "points of interest", used for beaker image
10/24/11 make beaker larger
10/24/11 improve slider thumbs
10/21/11 rename tab 2 to "Dilution"
# 0.00.04 (57838) Oct 21, 2011
10/21/11 fix: if solution is saturated, show at least 1 precipitate particle
10/21/11 change request: grey out the unavailable portion of the concentration display in saturated solutions
10/21/11 put a thin line around solution surface
10/21/11 horizontally center the "Saturated!" indicator in the beaker's cylinder
10/21/11 change request: remove "Show values" in Molarity tab (but feature may come back in future, so don't remove from code)